BasicCalculator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    LBRACK
    QMARKS
    RBRACK
    STRING
    UMINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID primerCuad var_assign subrutinas rellenaCuad a END PROGRAM ID
Rule 2     primerCuad -> empty
Rule 3     rellenaCuad -> empty
Rule 4     type_definition -> INT_TYPE
Rule 5     type_definition -> FLOAT_TYPE
Rule 6     var_assign -> type_definition COLONS COLONS var_local var_dimensiones create_var_table var_assign
Rule 7     var_assign -> empty
Rule 8     var_dimensiones -> LARR constante_entero RARR
Rule 9     var_dimensiones -> LARR constante_entero COMMA constante_entero RARR
Rule 10    var_dimensiones -> empty
Rule 11    create_var_table -> empty
Rule 12    var_local -> ID COMMA var_local
Rule 13    var_local -> ID
Rule 14    subrutinas -> f_local
Rule 15    subrutinas -> empty
Rule 16    f_local -> SUBROUTINE ID d END SUBROUTINE ID f_local
Rule 17    f_local -> SUBROUTINE ID d END SUBROUTINE ID
Rule 18    a -> BEGIN d END
Rule 19    d -> b
Rule 20    d -> b d
Rule 21    b -> variable_matrix_assign
Rule 22    b -> printing_variables
Rule 23    b -> if_expression
Rule 24    b -> do_loops
Rule 25    b -> call_subroutine
Rule 26    b -> reading_variables
Rule 27    b -> EXIT paso4DoExit
Rule 28    do_loops -> FOR paso1FOR ASSIGN expression_arith paso2FOR COMMA expression_arith paso3FOR DO d paso4FOR END_FOR
Rule 29    do_loops -> DO constante_entero COMMA constante_entero COMMA variable_matrix_assign d END_DO
Rule 30    do_loops -> DO paso1DO LOOP d WHILE expression_logic END_DO paso2DO
Rule 31    do_loops -> LOOP paso1DoExit d END_LOOP paso2DoExit paso3DoExit
Rule 32    paso1FOR -> ID
Rule 33    paso2FOR -> empty
Rule 34    paso3FOR -> empty
Rule 35    paso4FOR -> empty
Rule 36    reading_variables -> READ idrepInput
Rule 37    idrepInput -> idInput
Rule 38    idrepInput -> idInput COMMA idrepInput
Rule 39    idInput -> ID
Rule 40    call_subroutine -> CALL ID
Rule 41    if_expression -> IF expression_logic paso1IF THEN if_expression_local if_expression_local2 paso2IF ELSE if_expression_local paso3IF END_IF
Rule 42    if_expression -> IF expression_logic paso1IF THEN if_expression_local paso3IF END_IF
Rule 43    if_expression_local -> d
Rule 44    if_expression_local -> empty
Rule 45    if_expression_local2 -> ELSIF expression_logic THEN if_expression_local if_expression_local2
Rule 46    if_expression_local2 -> empty
Rule 47    printing_variables -> PRINT Output
Rule 48    Output -> idOut
Rule 49    Output -> LPAREN StringOut RPAREN
Rule 50    StringOut -> empty
Rule 51    StringOut -> ID StringOut
Rule 52    StringOut -> constante_entero StringOut
Rule 53    StringOut -> constante_flotante StringOut
Rule 54    StringOut -> COLONS StringOut
Rule 55    StringOut -> COMMA StringOut
Rule 56    StringOut -> QUESTION StringOut
Rule 57    idOut -> ID
Rule 58    variable_matrix_assign -> ID ASSIGN expression_arith
Rule 59    variable_matrix_assign -> ID LPAREN expression_arith RPAREN ASSIGN expression_arith
Rule 60    variable_matrix_assign -> ID LPAREN expression_arith COMMA expression_arith RPAREN ASSIGN expression_arith
Rule 61    expression_arith -> expression_arith PLUS c
Rule 62    expression_arith -> expression_arith MINUS c
Rule 63    expression_arith -> c
Rule 64    c -> c MULTIPLY te
Rule 65    c -> c DIVIDE te
Rule 66    c -> te
Rule 67    te -> ID
Rule 68    te -> constante_entero
Rule 69    te -> constante_flotante
Rule 70    te -> ID LPAREN expression_arith RPAREN
Rule 71    te -> ID LPAREN expression_arith COMMA expression_arith RPAREN
Rule 72    te -> LPAREN expression_arith RPAREN
Rule 73    expression_logic -> expression_logic OR g
Rule 74    expression_logic -> g
Rule 75    g -> g AND ge
Rule 76    g -> ge
Rule 77    ge -> ID GT ID
Rule 78    ge -> ID LT ID
Rule 79    ge -> ID GE ID
Rule 80    ge -> ID LE ID
Rule 81    ge -> ID NE ID
Rule 82    ge -> ID EQUAL ID
Rule 83    ge -> LPAREN expression_logic RPAREN
Rule 84    paso1IF -> empty
Rule 85    paso2IF -> empty
Rule 86    paso3IF -> empty
Rule 87    constante_entero -> INT
Rule 88    constante_flotante -> FLOAT
Rule 89    paso1DO -> empty
Rule 90    paso2DO -> empty
Rule 91    paso1DoExit -> empty
Rule 92    paso2DoExit -> empty
Rule 93    paso3DoExit -> empty
Rule 94    paso4DoExit -> empty
Rule 95    empty -> <empty>

Terminals, with rules where they appear

AND                  : 75
ASSIGN               : 28 58 59 60
BEGIN                : 18
CALL                 : 40
COLONS               : 6 6 54
COMMA                : 9 12 28 29 29 38 55 60 71
COMMENT              : 
DIVIDE               : 65
DO                   : 28 29 30
ELSE                 : 41
ELSIF                : 45
END                  : 1 16 17 18
END_DO               : 29 30
END_FOR              : 28
END_IF               : 41 42
END_LOOP             : 31
EQUAL                : 82
EXIT                 : 27
FLOAT                : 88
FLOAT_TYPE           : 5
FOR                  : 28
GE                   : 79
GT                   : 77
ID                   : 1 1 12 13 16 16 17 17 32 39 40 51 57 58 59 60 67 70 71 77 77 78 78 79 79 80 80 81 81 82 82
IF                   : 41 42
INT                  : 87
INT_TYPE             : 4
LARR                 : 8 9
LBRACK               : 
LE                   : 80
LOOP                 : 30 31
LPAREN               : 49 59 60 70 71 72 83
LT                   : 78
MINUS                : 62
MULTIPLY             : 64
NE                   : 81
OR                   : 73
PLUS                 : 61
PRINT                : 47
PROGRAM              : 1 1
QMARKS               : 
QUESTION             : 56
RARR                 : 8 9
RBRACK               : 
READ                 : 36
RPAREN               : 49 59 60 70 71 72 83
STRING               : 
SUBROUTINE           : 16 16 17 17
THEN                 : 41 42 45
UMINUS               : 
WHILE                : 30
error                : 

Nonterminals, with rules where they appear

Output               : 47
StringOut            : 49 51 52 53 54 55 56
a                    : 1
b                    : 19 20
c                    : 61 62 63 64 65
call_subroutine      : 25
constante_entero     : 8 9 9 29 29 52 68
constante_flotante   : 53 69
create_var_table     : 6
d                    : 16 17 18 20 28 29 30 31 43
do_loops             : 24
empty                : 2 3 7 10 11 15 33 34 35 44 46 50 84 85 86 89 90 91 92 93 94
expression_arith     : 28 28 58 59 59 60 60 60 61 62 70 71 71 72
expression_logic     : 30 41 42 45 73 83
f_local              : 14 16
g                    : 73 74 75
ge                   : 75 76
idInput              : 37 38
idOut                : 48
idrepInput           : 36 38
if_expression        : 23
if_expression_local  : 41 41 42 45
if_expression_local2 : 41 45
paso1DO              : 30
paso1DoExit          : 31
paso1FOR             : 28
paso1IF              : 41 42
paso2DO              : 30
paso2DoExit          : 31
paso2FOR             : 28
paso2IF              : 41
paso3DoExit          : 31
paso3FOR             : 28
paso3IF              : 41 42
paso4DoExit          : 27
paso4FOR             : 28
primerCuad           : 1
printing_variables   : 22
program              : 0
reading_variables    : 26
rellenaCuad          : 1
subrutinas           : 1
te                   : 64 65 66
type_definition      : 6
var_assign           : 1 6
var_dimensiones      : 6
var_local            : 6 12
variable_matrix_assign : 21 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID primerCuad var_assign subrutinas rellenaCuad a END PROGRAM ID

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID primerCuad var_assign subrutinas rellenaCuad a END PROGRAM ID

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . primerCuad var_assign subrutinas rellenaCuad a END PROGRAM ID
    (2) primerCuad -> . empty
    (95) empty -> .

    INT_TYPE        reduce using rule 95 (empty -> .)
    FLOAT_TYPE      reduce using rule 95 (empty -> .)
    SUBROUTINE      reduce using rule 95 (empty -> .)
    BEGIN           reduce using rule 95 (empty -> .)

    primerCuad                     shift and go to state 4
    empty                          shift and go to state 5

state 4

    (1) program -> PROGRAM ID primerCuad . var_assign subrutinas rellenaCuad a END PROGRAM ID
    (6) var_assign -> . type_definition COLONS COLONS var_local var_dimensiones create_var_table var_assign
    (7) var_assign -> . empty
    (4) type_definition -> . INT_TYPE
    (5) type_definition -> . FLOAT_TYPE
    (95) empty -> .

    INT_TYPE        shift and go to state 9
    FLOAT_TYPE      shift and go to state 10
    SUBROUTINE      reduce using rule 95 (empty -> .)
    BEGIN           reduce using rule 95 (empty -> .)

    var_assign                     shift and go to state 6
    type_definition                shift and go to state 7
    empty                          shift and go to state 8

state 5

    (2) primerCuad -> empty .

    INT_TYPE        reduce using rule 2 (primerCuad -> empty .)
    FLOAT_TYPE      reduce using rule 2 (primerCuad -> empty .)
    SUBROUTINE      reduce using rule 2 (primerCuad -> empty .)
    BEGIN           reduce using rule 2 (primerCuad -> empty .)


state 6

    (1) program -> PROGRAM ID primerCuad var_assign . subrutinas rellenaCuad a END PROGRAM ID
    (14) subrutinas -> . f_local
    (15) subrutinas -> . empty
    (16) f_local -> . SUBROUTINE ID d END SUBROUTINE ID f_local
    (17) f_local -> . SUBROUTINE ID d END SUBROUTINE ID
    (95) empty -> .

    SUBROUTINE      shift and go to state 14
    BEGIN           reduce using rule 95 (empty -> .)

    subrutinas                     shift and go to state 11
    f_local                        shift and go to state 12
    empty                          shift and go to state 13

state 7

    (6) var_assign -> type_definition . COLONS COLONS var_local var_dimensiones create_var_table var_assign

    COLONS          shift and go to state 15


state 8

    (7) var_assign -> empty .

    SUBROUTINE      reduce using rule 7 (var_assign -> empty .)
    BEGIN           reduce using rule 7 (var_assign -> empty .)


state 9

    (4) type_definition -> INT_TYPE .

    COLONS          reduce using rule 4 (type_definition -> INT_TYPE .)


state 10

    (5) type_definition -> FLOAT_TYPE .

    COLONS          reduce using rule 5 (type_definition -> FLOAT_TYPE .)


state 11

    (1) program -> PROGRAM ID primerCuad var_assign subrutinas . rellenaCuad a END PROGRAM ID
    (3) rellenaCuad -> . empty
    (95) empty -> .

    BEGIN           reduce using rule 95 (empty -> .)

    rellenaCuad                    shift and go to state 16
    empty                          shift and go to state 17

state 12

    (14) subrutinas -> f_local .

    BEGIN           reduce using rule 14 (subrutinas -> f_local .)


state 13

    (15) subrutinas -> empty .

    BEGIN           reduce using rule 15 (subrutinas -> empty .)


state 14

    (16) f_local -> SUBROUTINE . ID d END SUBROUTINE ID f_local
    (17) f_local -> SUBROUTINE . ID d END SUBROUTINE ID

    ID              shift and go to state 18


state 15

    (6) var_assign -> type_definition COLONS . COLONS var_local var_dimensiones create_var_table var_assign

    COLONS          shift and go to state 19


state 16

    (1) program -> PROGRAM ID primerCuad var_assign subrutinas rellenaCuad . a END PROGRAM ID
    (18) a -> . BEGIN d END

    BEGIN           shift and go to state 21

    a                              shift and go to state 20

state 17

    (3) rellenaCuad -> empty .

    BEGIN           reduce using rule 3 (rellenaCuad -> empty .)


state 18

    (16) f_local -> SUBROUTINE ID . d END SUBROUTINE ID f_local
    (17) f_local -> SUBROUTINE ID . d END SUBROUTINE ID
    (19) d -> . b
    (20) d -> . b d
    (21) b -> . variable_matrix_assign
    (22) b -> . printing_variables
    (23) b -> . if_expression
    (24) b -> . do_loops
    (25) b -> . call_subroutine
    (26) b -> . reading_variables
    (27) b -> . EXIT paso4DoExit
    (58) variable_matrix_assign -> . ID ASSIGN expression_arith
    (59) variable_matrix_assign -> . ID LPAREN expression_arith RPAREN ASSIGN expression_arith
    (60) variable_matrix_assign -> . ID LPAREN expression_arith COMMA expression_arith RPAREN ASSIGN expression_arith
    (47) printing_variables -> . PRINT Output
    (41) if_expression -> . IF expression_logic paso1IF THEN if_expression_local if_expression_local2 paso2IF ELSE if_expression_local paso3IF END_IF
    (42) if_expression -> . IF expression_logic paso1IF THEN if_expression_local paso3IF END_IF
    (28) do_loops -> . FOR paso1FOR ASSIGN expression_arith paso2FOR COMMA expression_arith paso3FOR DO d paso4FOR END_FOR
    (29) do_loops -> . DO constante_entero COMMA constante_entero COMMA variable_matrix_assign d END_DO
    (30) do_loops -> . DO paso1DO LOOP d WHILE expression_logic END_DO paso2DO
    (31) do_loops -> . LOOP paso1DoExit d END_LOOP paso2DoExit paso3DoExit
    (40) call_subroutine -> . CALL ID
    (36) reading_variables -> . READ idrepInput

    EXIT            shift and go to state 31
    ID              shift and go to state 22
    PRINT           shift and go to state 32
    IF              shift and go to state 33
    FOR             shift and go to state 34
    DO              shift and go to state 35
    LOOP            shift and go to state 36
    CALL            shift and go to state 37
    READ            shift and go to state 38

    d                              shift and go to state 23
    b                              shift and go to state 24
    variable_matrix_assign         shift and go to state 25
    printing_variables             shift and go to state 26
    if_expression                  shift and go to state 27
    do_loops                       shift and go to state 28
    call_subroutine                shift and go to state 29
    reading_variables              shift and go to state 30

state 19

    (6) var_assign -> type_definition COLONS COLONS . var_local var_dimensiones create_var_table var_assign
    (12) var_local -> . ID COMMA var_local
    (13) var_local -> . ID

    ID              shift and go to state 40

    var_local                      shift and go to state 39

state 20

    (1) program -> PROGRAM ID primerCuad var_assign subrutinas rellenaCuad a . END PROGRAM ID

    END             shift and go to state 41


state 21

    (18) a -> BEGIN . d END
    (19) d -> . b
    (20) d -> . b d
    (21) b -> . variable_matrix_assign
    (22) b -> . printing_variables
    (23) b -> . if_expression
    (24) b -> . do_loops
    (25) b -> . call_subroutine
    (26) b -> . reading_variables
    (27) b -> . EXIT paso4DoExit
    (58) variable_matrix_assign -> . ID ASSIGN expression_arith
    (59) variable_matrix_assign -> . ID LPAREN expression_arith RPAREN ASSIGN expression_arith
    (60) variable_matrix_assign -> . ID LPAREN expression_arith COMMA expression_arith RPAREN ASSIGN expression_arith
    (47) printing_variables -> . PRINT Output
    (41) if_expression -> . IF expression_logic paso1IF THEN if_expression_local if_expression_local2 paso2IF ELSE if_expression_local paso3IF END_IF
    (42) if_expression -> . IF expression_logic paso1IF THEN if_expression_local paso3IF END_IF
    (28) do_loops -> . FOR paso1FOR ASSIGN expression_arith paso2FOR COMMA expression_arith paso3FOR DO d paso4FOR END_FOR
    (29) do_loops -> . DO constante_entero COMMA constante_entero COMMA variable_matrix_assign d END_DO
    (30) do_loops -> . DO paso1DO LOOP d WHILE expression_logic END_DO paso2DO
    (31) do_loops -> . LOOP paso1DoExit d END_LOOP paso2DoExit paso3DoExit
    (40) call_subroutine -> . CALL ID
    (36) reading_variables -> . READ idrepInput

    EXIT            shift and go to state 31
    ID              shift and go to state 22
    PRINT           shift and go to state 32
    IF              shift and go to state 33
    FOR             shift and go to state 34
    DO              shift and go to state 35
    LOOP            shift and go to state 36
    CALL            shift and go to state 37
    READ            shift and go to state 38

    d                              shift and go to state 42
    b                              shift and go to state 24
    variable_matrix_assign         shift and go to state 25
    printing_variables             shift and go to state 26
    if_expression                  shift and go to state 27
    do_loops                       shift and go to state 28
    call_subroutine                shift and go to state 29
    reading_variables              shift and go to state 30

state 22

    (58) variable_matrix_assign -> ID . ASSIGN expression_arith
    (59) variable_matrix_assign -> ID . LPAREN expression_arith RPAREN ASSIGN expression_arith
    (60) variable_matrix_assign -> ID . LPAREN expression_arith COMMA expression_arith RPAREN ASSIGN expression_arith

    ASSIGN          shift and go to state 43
    LPAREN          shift and go to state 44


state 23

    (16) f_local -> SUBROUTINE ID d . END SUBROUTINE ID f_local
    (17) f_local -> SUBROUTINE ID d . END SUBROUTINE ID

    END             shift and go to state 45


state 24

    (19) d -> b .
    (20) d -> b . d
    (19) d -> . b
    (20) d -> . b d
    (21) b -> . variable_matrix_assign
    (22) b -> . printing_variables
    (23) b -> . if_expression
    (24) b -> . do_loops
    (25) b -> . call_subroutine
    (26) b -> . reading_variables
    (27) b -> . EXIT paso4DoExit
    (58) variable_matrix_assign -> . ID ASSIGN expression_arith
    (59) variable_matrix_assign -> . ID LPAREN expression_arith RPAREN ASSIGN expression_arith
    (60) variable_matrix_assign -> . ID LPAREN expression_arith COMMA expression_arith RPAREN ASSIGN expression_arith
    (47) printing_variables -> . PRINT Output
    (41) if_expression -> . IF expression_logic paso1IF THEN if_expression_local if_expression_local2 paso2IF ELSE if_expression_local paso3IF END_IF
    (42) if_expression -> . IF expression_logic paso1IF THEN if_expression_local paso3IF END_IF
    (28) do_loops -> . FOR paso1FOR ASSIGN expression_arith paso2FOR COMMA expression_arith paso3FOR DO d paso4FOR END_FOR
    (29) do_loops -> . DO constante_entero COMMA constante_entero COMMA variable_matrix_assign d END_DO
    (30) do_loops -> . DO paso1DO LOOP d WHILE expression_logic END_DO paso2DO
    (31) do_loops -> . LOOP paso1DoExit d END_LOOP paso2DoExit paso3DoExit
    (40) call_subroutine -> . CALL ID
    (36) reading_variables -> . READ idrepInput

    END             reduce using rule 19 (d -> b .)
    END_LOOP        reduce using rule 19 (d -> b .)
    WHILE           reduce using rule 19 (d -> b .)
    ELSIF           reduce using rule 19 (d -> b .)
    ELSE            reduce using rule 19 (d -> b .)
    END_IF          reduce using rule 19 (d -> b .)
    END_DO          reduce using rule 19 (d -> b .)
    END_FOR         reduce using rule 19 (d -> b .)
    EXIT            shift and go to state 31
    ID              shift and go to state 22
    PRINT           shift and go to state 32
    IF              shift and go to state 33
    FOR             shift and go to state 34
    DO              shift and go to state 35
    LOOP            shift and go to state 36
    CALL            shift and go to state 37
    READ            shift and go to state 38

    b                              shift and go to state 24
    d                              shift and go to state 46
    variable_matrix_assign         shift and go to state 25
    printing_variables             shift and go to state 26
    if_expression                  shift and go to state 27
    do_loops                       shift and go to state 28
    call_subroutine                shift and go to state 29
    reading_variables              shift and go to state 30

state 25

    (21) b -> variable_matrix_assign .

    EXIT            reduce using rule 21 (b -> variable_matrix_assign .)
    ID              reduce using rule 21 (b -> variable_matrix_assign .)
    PRINT           reduce using rule 21 (b -> variable_matrix_assign .)
    IF              reduce using rule 21 (b -> variable_matrix_assign .)
    FOR             reduce using rule 21 (b -> variable_matrix_assign .)
    DO              reduce using rule 21 (b -> variable_matrix_assign .)
    LOOP            reduce using rule 21 (b -> variable_matrix_assign .)
    CALL            reduce using rule 21 (b -> variable_matrix_assign .)
    READ            reduce using rule 21 (b -> variable_matrix_assign .)
    END             reduce using rule 21 (b -> variable_matrix_assign .)
    END_LOOP        reduce using rule 21 (b -> variable_matrix_assign .)
    WHILE           reduce using rule 21 (b -> variable_matrix_assign .)
    ELSIF           reduce using rule 21 (b -> variable_matrix_assign .)
    ELSE            reduce using rule 21 (b -> variable_matrix_assign .)
    END_IF          reduce using rule 21 (b -> variable_matrix_assign .)
    END_DO          reduce using rule 21 (b -> variable_matrix_assign .)
    END_FOR         reduce using rule 21 (b -> variable_matrix_assign .)


state 26

    (22) b -> printing_variables .

    EXIT            reduce using rule 22 (b -> printing_variables .)
    ID              reduce using rule 22 (b -> printing_variables .)
    PRINT           reduce using rule 22 (b -> printing_variables .)
    IF              reduce using rule 22 (b -> printing_variables .)
    FOR             reduce using rule 22 (b -> printing_variables .)
    DO              reduce using rule 22 (b -> printing_variables .)
    LOOP            reduce using rule 22 (b -> printing_variables .)
    CALL            reduce using rule 22 (b -> printing_variables .)
    READ            reduce using rule 22 (b -> printing_variables .)
    END             reduce using rule 22 (b -> printing_variables .)
    END_LOOP        reduce using rule 22 (b -> printing_variables .)
    WHILE           reduce using rule 22 (b -> printing_variables .)
    ELSIF           reduce using rule 22 (b -> printing_variables .)
    ELSE            reduce using rule 22 (b -> printing_variables .)
    END_IF          reduce using rule 22 (b -> printing_variables .)
    END_DO          reduce using rule 22 (b -> printing_variables .)
    END_FOR         reduce using rule 22 (b -> printing_variables .)


state 27

    (23) b -> if_expression .

    EXIT            reduce using rule 23 (b -> if_expression .)
    ID              reduce using rule 23 (b -> if_expression .)
    PRINT           reduce using rule 23 (b -> if_expression .)
    IF              reduce using rule 23 (b -> if_expression .)
    FOR             reduce using rule 23 (b -> if_expression .)
    DO              reduce using rule 23 (b -> if_expression .)
    LOOP            reduce using rule 23 (b -> if_expression .)
    CALL            reduce using rule 23 (b -> if_expression .)
    READ            reduce using rule 23 (b -> if_expression .)
    END             reduce using rule 23 (b -> if_expression .)
    END_LOOP        reduce using rule 23 (b -> if_expression .)
    WHILE           reduce using rule 23 (b -> if_expression .)
    ELSIF           reduce using rule 23 (b -> if_expression .)
    ELSE            reduce using rule 23 (b -> if_expression .)
    END_IF          reduce using rule 23 (b -> if_expression .)
    END_DO          reduce using rule 23 (b -> if_expression .)
    END_FOR         reduce using rule 23 (b -> if_expression .)


state 28

    (24) b -> do_loops .

    EXIT            reduce using rule 24 (b -> do_loops .)
    ID              reduce using rule 24 (b -> do_loops .)
    PRINT           reduce using rule 24 (b -> do_loops .)
    IF              reduce using rule 24 (b -> do_loops .)
    FOR             reduce using rule 24 (b -> do_loops .)
    DO              reduce using rule 24 (b -> do_loops .)
    LOOP            reduce using rule 24 (b -> do_loops .)
    CALL            reduce using rule 24 (b -> do_loops .)
    READ            reduce using rule 24 (b -> do_loops .)
    END             reduce using rule 24 (b -> do_loops .)
    END_LOOP        reduce using rule 24 (b -> do_loops .)
    WHILE           reduce using rule 24 (b -> do_loops .)
    ELSIF           reduce using rule 24 (b -> do_loops .)
    ELSE            reduce using rule 24 (b -> do_loops .)
    END_IF          reduce using rule 24 (b -> do_loops .)
    END_DO          reduce using rule 24 (b -> do_loops .)
    END_FOR         reduce using rule 24 (b -> do_loops .)


state 29

    (25) b -> call_subroutine .

    EXIT            reduce using rule 25 (b -> call_subroutine .)
    ID              reduce using rule 25 (b -> call_subroutine .)
    PRINT           reduce using rule 25 (b -> call_subroutine .)
    IF              reduce using rule 25 (b -> call_subroutine .)
    FOR             reduce using rule 25 (b -> call_subroutine .)
    DO              reduce using rule 25 (b -> call_subroutine .)
    LOOP            reduce using rule 25 (b -> call_subroutine .)
    CALL            reduce using rule 25 (b -> call_subroutine .)
    READ            reduce using rule 25 (b -> call_subroutine .)
    END             reduce using rule 25 (b -> call_subroutine .)
    END_LOOP        reduce using rule 25 (b -> call_subroutine .)
    WHILE           reduce using rule 25 (b -> call_subroutine .)
    ELSIF           reduce using rule 25 (b -> call_subroutine .)
    ELSE            reduce using rule 25 (b -> call_subroutine .)
    END_IF          reduce using rule 25 (b -> call_subroutine .)
    END_DO          reduce using rule 25 (b -> call_subroutine .)
    END_FOR         reduce using rule 25 (b -> call_subroutine .)


state 30

    (26) b -> reading_variables .

    EXIT            reduce using rule 26 (b -> reading_variables .)
    ID              reduce using rule 26 (b -> reading_variables .)
    PRINT           reduce using rule 26 (b -> reading_variables .)
    IF              reduce using rule 26 (b -> reading_variables .)
    FOR             reduce using rule 26 (b -> reading_variables .)
    DO              reduce using rule 26 (b -> reading_variables .)
    LOOP            reduce using rule 26 (b -> reading_variables .)
    CALL            reduce using rule 26 (b -> reading_variables .)
    READ            reduce using rule 26 (b -> reading_variables .)
    END             reduce using rule 26 (b -> reading_variables .)
    END_LOOP        reduce using rule 26 (b -> reading_variables .)
    WHILE           reduce using rule 26 (b -> reading_variables .)
    ELSIF           reduce using rule 26 (b -> reading_variables .)
    ELSE            reduce using rule 26 (b -> reading_variables .)
    END_IF          reduce using rule 26 (b -> reading_variables .)
    END_DO          reduce using rule 26 (b -> reading_variables .)
    END_FOR         reduce using rule 26 (b -> reading_variables .)


state 31

    (27) b -> EXIT . paso4DoExit
    (94) paso4DoExit -> . empty
    (95) empty -> .

    EXIT            reduce using rule 95 (empty -> .)
    ID              reduce using rule 95 (empty -> .)
    PRINT           reduce using rule 95 (empty -> .)
    IF              reduce using rule 95 (empty -> .)
    FOR             reduce using rule 95 (empty -> .)
    DO              reduce using rule 95 (empty -> .)
    LOOP            reduce using rule 95 (empty -> .)
    CALL            reduce using rule 95 (empty -> .)
    READ            reduce using rule 95 (empty -> .)
    END             reduce using rule 95 (empty -> .)
    END_LOOP        reduce using rule 95 (empty -> .)
    WHILE           reduce using rule 95 (empty -> .)
    ELSIF           reduce using rule 95 (empty -> .)
    ELSE            reduce using rule 95 (empty -> .)
    END_IF          reduce using rule 95 (empty -> .)
    END_DO          reduce using rule 95 (empty -> .)
    END_FOR         reduce using rule 95 (empty -> .)

    paso4DoExit                    shift and go to state 47
    empty                          shift and go to state 48

state 32

    (47) printing_variables -> PRINT . Output
    (48) Output -> . idOut
    (49) Output -> . LPAREN StringOut RPAREN
    (57) idOut -> . ID

    LPAREN          shift and go to state 51
    ID              shift and go to state 52

    Output                         shift and go to state 49
    idOut                          shift and go to state 50

state 33

    (41) if_expression -> IF . expression_logic paso1IF THEN if_expression_local if_expression_local2 paso2IF ELSE if_expression_local paso3IF END_IF
    (42) if_expression -> IF . expression_logic paso1IF THEN if_expression_local paso3IF END_IF
    (73) expression_logic -> . expression_logic OR g
    (74) expression_logic -> . g
    (75) g -> . g AND ge
    (76) g -> . ge
    (77) ge -> . ID GT ID
    (78) ge -> . ID LT ID
    (79) ge -> . ID GE ID
    (80) ge -> . ID LE ID
    (81) ge -> . ID NE ID
    (82) ge -> . ID EQUAL ID
    (83) ge -> . LPAREN expression_logic RPAREN

    ID              shift and go to state 56
    LPAREN          shift and go to state 57

    expression_logic               shift and go to state 53
    g                              shift and go to state 54
    ge                             shift and go to state 55

state 34

    (28) do_loops -> FOR . paso1FOR ASSIGN expression_arith paso2FOR COMMA expression_arith paso3FOR DO d paso4FOR END_FOR
    (32) paso1FOR -> . ID

    ID              shift and go to state 59

    paso1FOR                       shift and go to state 58

state 35

    (29) do_loops -> DO . constante_entero COMMA constante_entero COMMA variable_matrix_assign d END_DO
    (30) do_loops -> DO . paso1DO LOOP d WHILE expression_logic END_DO paso2DO
    (87) constante_entero -> . INT
    (89) paso1DO -> . empty
    (95) empty -> .

    INT             shift and go to state 62
    LOOP            reduce using rule 95 (empty -> .)

    constante_entero               shift and go to state 60
    paso1DO                        shift and go to state 61
    empty                          shift and go to state 63

state 36

    (31) do_loops -> LOOP . paso1DoExit d END_LOOP paso2DoExit paso3DoExit
    (91) paso1DoExit -> . empty
    (95) empty -> .

    EXIT            reduce using rule 95 (empty -> .)
    ID              reduce using rule 95 (empty -> .)
    PRINT           reduce using rule 95 (empty -> .)
    IF              reduce using rule 95 (empty -> .)
    FOR             reduce using rule 95 (empty -> .)
    DO              reduce using rule 95 (empty -> .)
    LOOP            reduce using rule 95 (empty -> .)
    CALL            reduce using rule 95 (empty -> .)
    READ            reduce using rule 95 (empty -> .)

    paso1DoExit                    shift and go to state 64
    empty                          shift and go to state 65

state 37

    (40) call_subroutine -> CALL . ID

    ID              shift and go to state 66


state 38

    (36) reading_variables -> READ . idrepInput
    (37) idrepInput -> . idInput
    (38) idrepInput -> . idInput COMMA idrepInput
    (39) idInput -> . ID

    ID              shift and go to state 69

    idrepInput                     shift and go to state 67
    idInput                        shift and go to state 68

state 39

    (6) var_assign -> type_definition COLONS COLONS var_local . var_dimensiones create_var_table var_assign
    (8) var_dimensiones -> . LARR constante_entero RARR
    (9) var_dimensiones -> . LARR constante_entero COMMA constante_entero RARR
    (10) var_dimensiones -> . empty
    (95) empty -> .

    LARR            shift and go to state 71
    INT_TYPE        reduce using rule 95 (empty -> .)
    FLOAT_TYPE      reduce using rule 95 (empty -> .)
    SUBROUTINE      reduce using rule 95 (empty -> .)
    BEGIN           reduce using rule 95 (empty -> .)

    var_dimensiones                shift and go to state 70
    empty                          shift and go to state 72

state 40

    (12) var_local -> ID . COMMA var_local
    (13) var_local -> ID .

    COMMA           shift and go to state 73
    LARR            reduce using rule 13 (var_local -> ID .)
    INT_TYPE        reduce using rule 13 (var_local -> ID .)
    FLOAT_TYPE      reduce using rule 13 (var_local -> ID .)
    SUBROUTINE      reduce using rule 13 (var_local -> ID .)
    BEGIN           reduce using rule 13 (var_local -> ID .)


state 41

    (1) program -> PROGRAM ID primerCuad var_assign subrutinas rellenaCuad a END . PROGRAM ID

    PROGRAM         shift and go to state 74


state 42

    (18) a -> BEGIN d . END

    END             shift and go to state 75


state 43

    (58) variable_matrix_assign -> ID ASSIGN . expression_arith
    (61) expression_arith -> . expression_arith PLUS c
    (62) expression_arith -> . expression_arith MINUS c
    (63) expression_arith -> . c
    (64) c -> . c MULTIPLY te
    (65) c -> . c DIVIDE te
    (66) c -> . te
    (67) te -> . ID
    (68) te -> . constante_entero
    (69) te -> . constante_flotante
    (70) te -> . ID LPAREN expression_arith RPAREN
    (71) te -> . ID LPAREN expression_arith COMMA expression_arith RPAREN
    (72) te -> . LPAREN expression_arith RPAREN
    (87) constante_entero -> . INT
    (88) constante_flotante -> . FLOAT

    ID              shift and go to state 76
    LPAREN          shift and go to state 82
    INT             shift and go to state 62
    FLOAT           shift and go to state 83

    expression_arith               shift and go to state 77
    c                              shift and go to state 78
    te                             shift and go to state 79
    constante_entero               shift and go to state 80
    constante_flotante             shift and go to state 81

state 44

    (59) variable_matrix_assign -> ID LPAREN . expression_arith RPAREN ASSIGN expression_arith
    (60) variable_matrix_assign -> ID LPAREN . expression_arith COMMA expression_arith RPAREN ASSIGN expression_arith
    (61) expression_arith -> . expression_arith PLUS c
    (62) expression_arith -> . expression_arith MINUS c
    (63) expression_arith -> . c
    (64) c -> . c MULTIPLY te
    (65) c -> . c DIVIDE te
    (66) c -> . te
    (67) te -> . ID
    (68) te -> . constante_entero
    (69) te -> . constante_flotante
    (70) te -> . ID LPAREN expression_arith RPAREN
    (71) te -> . ID LPAREN expression_arith COMMA expression_arith RPAREN
    (72) te -> . LPAREN expression_arith RPAREN
    (87) constante_entero -> . INT
    (88) constante_flotante -> . FLOAT
